Ensure font size applies to right item in overlapping tout
Completes DD 71427-23

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -644,14 +644,14 @@ $slider-dot--inactive__color: #a6a6a6;
             margin: 0;
         }
 
-        span,
+        p,
         .tout-subheader {
             font-size: $font-size__base--desktop;
             line-height: 1.3;
         }
 
         @include min-screen($screen__m) {
-            span,
+            p,
             button,
             .tout-subheader {
                 font-size: 16px;
